...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/txtReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="right"
            android:text="@string/reminderName"
            android:width="70dip" >
        </TextView>

        <EditText
            android:id="@+id/edtReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@id/txtReminder"
            android:hint="@string/reminderNameTip"
            android:width="290dip" >
...
            android:gravity="right"
            android:text="@string/reminderDetails"
            android:width="70dip" >
        </TextView>

        <EditText
            android:id="@+id/edtDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtReminder"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@id/txtDetails"
            android:hint="@string/reminderDetailsTip"
...
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@id/txtTime"
            android:minWidth="290dip" >
        </Spinner>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerTime"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:onClick="btnSave_click"
                android:text="@string/saveButton" >
            </Button>
...
